k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xebikart-dashboard
  labels:
    app: xebikart
    tier: dashboard
spec:
  type: NodePort
  ports:
    - port: 80
  selector:
    app: xebikart
    tier: dashboard
