k8s-manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: xebikart-dashboard-ingress
  annotations:
    external-dns.alpha.kubernetes.io/hostname: dashboard.xebik.art.
    external-dns.alpha.kubernetes.io/ttl: "60"
spec:
  backend:
    serviceName: xebikart-dashboard
    servicePort: 80
